@@ -1,3 +1,11 @@
+2018-08-30  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1102
+
+	* .travis.yml:
+
+	Add Travis CI config.
+
 2018-08-26  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-1101
